--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,14 @@ body {
     color: white;
     display: flex;
     height: 100vh;
-    box-sizing: border-box;
+    
 }
 
 /* Barre latérale */
 .sidebar {
     width: 20%;
     background-color: #333131;
-    padding: 20px;
+    padding-right: 20px;
     display: flex;
     flex-direction: column;
     position: fixed; /* Fixée sur le côté gauche */
@@ -84,15 +84,15 @@ body {
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 20px;
+    gap: 5px;
 }
 
 .card {
-    background-color: #282828;
+    background-color: #0b0b0b;
     border-radius: 8px;
     overflow: hidden;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
     transition: transform 0.3s;
 }
 
@@ -112,7 +112,7 @@ body {
 
 /* Barre de contrôle audio */
 .audio-bar {
-    background-color: #282828;
+    background-color: #2a2222;
     padding: 10px 20px;
     position: fixed;
     bottom: 0;
